--- a/gray-bingo-cache/pom.xml
+++ b/gray-bingo-cache/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gray-bingo-common</artifactId>
+    <artifactId>gray-bingo-cache</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
@@ -19,23 +19,19 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.3.24</spring.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <caffeine.version>2.9.0</caffeine.version>
     </properties>
+
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-            <scope>compile</scope>
+            <groupId>com.pengjunlee.bingo</groupId>
+            <artifactId>gray-bingo-common</artifactId>
         </dependency>
-        <!-- slf4j-api -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
         </dependency>
     </dependencies>
-
 </project>
