--- a/gray-bingo-starter/pom.xml
+++ b/gray-bingo-starter/pom.xml
@@ -4,9 +4,38 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.pengjunlee.bingo</groupId>
+        <artifactId>gray-bingo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>com.pengjunlee.bingo</groupId>
     <artifactId>gray-bingo-starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <!-- ============================== 项目内依赖 ============================== -->
+        <dependency>
+            <groupId>com.pengjunlee.bingo</groupId>
+            <artifactId>gray-bingo-common</artifactId>
+        </dependency>
+
+        <!-- ============================== Springboot依赖 ============================== -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions><!-- 去掉默认日志配置logback -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+    </dependencies>
 </project>
