--- a/gray-bingo-cache/pom.xml
+++ b/gray-bingo-cache/pom.xml
@@ -28,10 +28,21 @@
             <groupId>com.pengjunlee.bingo</groupId>
             <artifactId>gray-bingo-common</artifactId>
         </dependency>
+        <!-- ============================== caffeine =============================== -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>${caffeine.version}</version>
+        </dependency>
+        <!-- ============================== redis =============================== -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 </project>
