--- a/gray-bingo-cache/pom.xml
+++ b/gray-bingo-cache/pom.xml
@@ -12,13 +12,10 @@
 
     <artifactId>gray-bingo-cache</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- 第三方包版本 -->
         <caffeine.version>2.9.0</caffeine.version>
     </properties>
 
@@ -34,10 +31,15 @@
             <artifactId>caffeine</artifactId>
             <version>${caffeine.version}</version>
         </dependency>
-        <!-- ============================== redis =============================== -->
+        <!-- ============================== spring-boot redis =============================== -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
