--- a/gray-bingo-cache/pom.xml
+++ b/gray-bingo-cache/pom.xml
@@ -34,6 +34,10 @@
         <!-- ============================== spring-boot redis =============================== -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <optional>true</optional>
         </dependency>
