--- a/gray-bingo-starter/pom.xml
+++ b/gray-bingo-starter/pom.xml
@@ -14,7 +14,6 @@
     <artifactId>gray-bingo-starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <dependencies>
         <!-- ============================== 项目内依赖 ============================== -->
         <dependency>
@@ -37,6 +36,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
