--- a/gray-bingo-tracker/pom.xml
+++ b/gray-bingo-tracker/pom.xml
@@ -10,43 +10,39 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gray-bingo-common</artifactId>
+    <groupId>com.pengjunlee.bingo</groupId>
+    <artifactId>gray-bingo-tracker</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.3.24</spring.version>
-        <slf4j.version>1.7.36</slf4j.version>
     </properties>
 
     <dependencies>
+        <!-- ============================== 项目内依赖 ============================== -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-            <scope>compile</scope>
+            <groupId>com.pengjunlee.bingo</groupId>
+            <artifactId>gray-bingo-common</artifactId>
         </dependency>
-        <!-- slf4j-api -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <!-- ============================== json模块 ============================= -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-json</artifactId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>9.0.78</version>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.13</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.19</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 </project>
