--- a/gray-bingo-mybatis/pom.xml
+++ b/gray-bingo-mybatis/pom.xml
@@ -10,15 +10,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>gray.bingo</groupId>
     <artifactId>gray-bingo-mybatis</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <mybatis.version>3.5.10</mybatis.version>
-        <mybatis.spring.version>2.1.0</mybatis.spring.version>
-        <mybatis.boot.version>2.2.2</mybatis.boot.version>
-        <mybatis.plus.version>3.4.0</mybatis.plus.version>
+        <mybatis.version>3.5.15</mybatis.version>
+        <mybatis.spring.version>2.1.2</mybatis.spring.version>
+        <mybatis.boot.version>2.3.2</mybatis.boot.version>
+        <mybatis.plus.version>3.5.5</mybatis.plus.version>
     </properties>
     <dependencies>
         <!-- Mybatis 插件 -->
@@ -26,11 +25,6 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis.spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.generator</groupId>
@@ -41,6 +35,20 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.boot.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-to-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jul-to-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mybatis</groupId>
+                    <artifactId>mybatis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- Mybatis Plus 插件 -->
         <dependency>
@@ -66,13 +74,17 @@
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-lang3</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
             </exclusions>
             <version>2.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
-            <version>2.4.4</version>
+            <version>2.7.18</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -93,6 +105,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
