--- a/gray-bingo-tracker/pom.xml
+++ b/gray-bingo-tracker/pom.xml
@@ -26,7 +26,6 @@
             <groupId>gray.bingo</groupId>
             <artifactId>gray-bingo-common</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -41,8 +40,17 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.9.19</version>
+            <version>1.9.7</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.github.openfeign/feign-core -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>13.2.1</version>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 </project>
