--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>gray-bingo-cache</module>
         <module>gray-bingo-mybatis</module>
         <module>gray-bingo-tracker</module>
+        <module>gray-bingo-tools</module>
     </modules>
 
     <properties>
