--- a/gray-bingo-web/package.json
+++ b/gray-bingo-web/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
