--- a/gray-bingo-common/pom.xml
+++ b/gray-bingo-common/pom.xml
@@ -57,6 +57,18 @@
             <version>9.0.83</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 配置 JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
