--- a/gray-bingo-common/pom.xml
+++ b/gray-bingo-common/pom.xml
@@ -82,6 +82,11 @@
             <version>4.12.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>2.9.2</version> <!-- 使用最新版本 -->
+        </dependency>
     </dependencies>
 
 </project>
